2003-05-30  Bradley Bell  <btb@icculus.org>

	* 2d/pcx.c, include/physfsx.h: use physfs for writing pcx files

	* include/d_io.h, include/physfsx.h, main/inferno.c,
	main/newdemo.c, main/scores.c, misc/Makefile.am, misc/d_io.c: get
	rid of d_io stuff.

	* main/scores.c: use physfs for scores file

	* main/playsave.c: improve player loading

	* main/movie.c: improve movie loading

	* main/mission.c: improve mission loading

	* main/ai.c, main/ai.h, main/gameseq.c, main/newmenu.c,
	main/state.c: use physfs for savegames

	* README: minor update

2003-05-22  Bradley Bell  <btb@icculus.org>

	* main/newdemo.c: use physfs for demos

	* include/physfsx.h: added PHYSFSX_rename function

	* libmve/mveplay.c: syntax error

2003-05-21  Bradley Bell  <btb@icculus.org>

	* include/fileutil.h, main/movie.c, misc/Makefile.am,
	misc/fileutil.c: remove old fileutil functions

	* main/gameseq.c, main/mission.c, main/movie.c: make movies use
	physfs/rwops, add libmve callbacks

	* include/libmve.h, libmve/mvelib.c, libmve/mvelib.h,
	libmve/mveplay.c: better separation of libmve

	* include/physfsrwops.h, misc/Makefile.am, misc/physfsrwops.c:
	added physfsrwops stuff

2003-05-20  Bradley Bell  <btb@icculus.org>

	* include/cfile.h: added cfile_close wrapper

	* main/mission.c, main/newmenu.c: use PHYSFS to load missions,
	player files

	* include/ignorecase.h, misc/Makefile.am, misc/ignorecase.c: added
	ignorecase stuff

2003-05-17  Bradley Bell  <btb@icculus.org>

	* main/config.c: use physfs to read config file

	* include/physfsx.h: added gets and puts functions

	* include/cfile.h: correct seek return value

2003-05-16  Bradley Bell  <btb@icculus.org>

	* main/config.c, main/playsave.c: use physfs to write
	config/player files

	* include/physfsx.h: added my physfs extensions

	* main/inferno.c: physfs initialization stuff

	* main/polyobj.c: use cfilelength instead of file->size

	* configure.ac: add check for physfs lib

	* include/cfile.h: made cfile into a wrapper for physfs
